--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@
 .square{
 	font-family: 'Oswald', sans-serif;
 	font-size: 78px;
+	color: white;
 }
 
 #square-1{
@@ -14,7 +15,7 @@
 	vertical-align: bottom;
 	line-height: 700px;
 	padding-right: 10px;
-	background-color: red; 
+	background-color: #E82B00; 
 	float: left; 
 }
 
@@ -27,7 +28,7 @@
 	vertical-align: bottom;
 	line-height: 700px;
 	padding-left: 10px;
-	background-color: blue;  
+	background-color: #27B4E3;  
 }
 
 #square-3{
@@ -50,5 +51,5 @@
 	vertical-align: bottom;
 	line-height: 200px;
 	padding-left: 10px;
-	background-color: yellow;  
+	background-color: #F5D20C;  
 }
